--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -7,7 +7,7 @@ hero:
   image:
     file: ../../assets/app-mockup.png
   actions:
-    - text: Get the app
+    - text: Buy now
       link: https://codecanyon.net/item/food-star-react-native-food-delivery-template/28398069
       variant: primary
     - text: Read the Food Star docs
@@ -20,13 +20,13 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 ## Highlight Features
 
 <CardGrid stagger>
-  <Card title="Built with latest technologies" icon="pencil">
+  <Card title="Built with latest technologies" icon="rocket">
     - React 18
     - React Native 0.71
     - Expo 48
     - CI Integration with Github Actions and EAS
   </Card>
-  <Card title="A perfect UI kit for your next project" icon="add-document">
+  <Card title="A perfect UI kit for your next project" icon="star">
     - 40+ sample screens & well-crafted UI elements
     - Built-in theming system and customizable components
     - Dark mode & Right-to-left support
